--- a/.gitignore
+++ b/.gitignore
@@ -68,11 +68,11 @@ typings/
 *.code-workspace
 
 # Ignore MongoDB data files that were created when running mongodb
-app_server/models/data/
-app_server/models/diagnostic.data/
-app_server/models/WiredTiger
+app_api/models/data/
+app_api/models/diagnostic.data/
+app_api/models/WiredTiger
 
 # Exclude all files in app_server/models except db.js and travlr.js
-app_server/models/*
-!app_server/models/db.js
-!app_server/models/travlr.js
+app_api/models/*
+!app_api/models/db.js
+!app_api/models/travlr.js
